fixed scrolling bug on mobile.

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -555,6 +555,10 @@ a {
 
 /* Mobile Styling */
 @media (max-width: 1180px) {
+  body {
+    overflow: hidden;
+  }
+
   input {
     font-size: 16px;
   }
